Adding some example JVM tuning options.